--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Truong Quang Minh</h1>
+    <h2>Student of GW Unniversity</h2>
 </body>
 </html>
